crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__config_custom_store.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&c"
---
{
  "vault": {
    "name": "my-vault",
    "tier": "local",
    "source": {
      "redact_on_forget": false
    },
    "layout": {
      "sources": "sources",
      "records": "raw",
      "wiki": "wiki",
      "skills": "skills",
      "enabled_kinds": [
        "user",
        "feedback",
        "fact",
        "rule"
      ],
      "file_naming": "{kind}_{slug}.md",
      "index": {
        "max_lines": 200,
        "max_bytes": 25600
      }
    },
    "hot_memory": {
      "pre_compact_recipe": "handoff",
      "pre_compact_safety_ratio": 0.3,
      "default_recipe": "chat",
      "recipes": {
        "chat": {
          "steps": [
            "purpose",
            "index",
            "pinned_feedback"
          ],
          "max_bytes": 8192
        },
        "debug": {
          "steps": [
            "purpose",
            "pinned_feedback",
            "top_salience_project",
            "recent_user_signal"
          ],
          "max_bytes": 16384
        },
        "handoff": {
          "steps": [
            "purpose",
            "index",
            "active_playbook",
            "recent_user_signal"
          ],
          "max_bytes": 16384
        },
        "wake-up": {
          "steps": [
            "purpose",
            "recent_user_signal"
          ],
          "max_bytes": 8192
        }
      }
    },
    "salience": {
      "decay_rate": 0.05,
      "eviction_threshold": 0.1,
      "min_age_days": 30,
      "batch_limit": 500
    },
    "retention": {
      "raw/sensor_observation_*.md": "7d",
      "raw/trace_*.md": "30d"
    },
    "schema_files": [
      "CLAUDE.md",
      "AGENTS.md",
      "GEMINI.md"
    ]
  },
  "store": {
    "kind": "custom:cairn-store-qdrant",
    "nexus": {
      "data_dir": "nexus-data",
      "command": "nexusd",
      "args": [
        "--profile",
        "sandbox",
        "--host",
        "127.0.0.1",
        "--port",
        "8765",
        "--workspace",
        "{vault_dir}",
        "--data-dir",
        "{data_dir}"
      ],
      "endpoint": "http://127.0.0.1:8765",
      "health_path": "/health",
      "health_timeout_ms": 120000,
      "shutdown_timeout_ms": 2000
    }
  },
  "llm": {
    "provider": null,
    "base_url": null,
    "model": null,
    "api_key": null
  },
  "agent_provider": {
    "kind": null,
    "command": "cairn"
  },
  "search": {
    "local_embeddings": true,
    "embedding_model": "bge-small-en-v1.5",
    "default_mode": "hybrid",
    "default_provider": "local",
    "rerank_blend": 0.7,
    "fts_column_weights": [
      10.0,
      10.0,
      5.0,
      1.0
    ],
    "rrf_k": 60,
    "rerank_topk": 20,
    "max_snippet_chars_per_page": 8000,
    "graph_confidence_min": 0.3
  },
  "source": {
    "redact_on_forget": false
  },
  "sensors": {
    "hooks": {
      "enabled": true,
      "budget": {
        "max_items": null,
        "max_bytes": null
      },
      "retention": {
        "max_days": null
      }
    },
    "ide": {
      "enabled": true,
      "budget": {
        "max_items": null,
        "max_bytes": null
      },
      "retention": {
        "max_days": null
      }
    },
    "terminal": {
      "enabled": false,
      "budget": {
        "max_items": null,
        "max_bytes": null
      },
      "retention": {
        "max_days": null
      }
    },
    "clipboard": {
      "enabled": false,
      "budget": {
        "max_items": null,
        "max_bytes": null
      },
      "retention": {
        "max_days": null
      }
    },
    "voice": {
      "enabled": false,
      "budget": {
        "max_items": null,
        "max_bytes": null
      },
      "retention": {
        "max_days": null
      }
    },
    "screen": {
      "enabled": false,
      "backend": "xcap",
      "ocr": {
        "engine": "auto"
      },
      "allow_apps": [],
      "blur_password_fields": true,
      "budget": {
        "max_frames_per_minute": 12,
        "max_text_bytes_per_event": 16384
      },
      "retention": {
        "max_days": null
      }
    },
    "recording": {
      "enabled": false,
      "budget": {
        "max_items": null,
        "max_bytes": null
      },
      "retention": {
        "max_days": null
      }
    },
    "slack": {
      "enabled": false,
      "scope": []
    }
  },
  "reference_consumer": {
    "zero_capture_nudge": {
      "enabled": true
    }
  },
  "workflows": {
    "orchestrator": "local",
    "lint": {
      "max_dead_letter_listed": 10,
      "stuck_queue_threshold_ms": 600000,
      "stale_dream_threshold_ms": 86400000,
      "overdue_threshold_ms": 172800000
    }
  },
  "pipeline": {
    "extract": {
      "chain": [
        {
          "worker": "regex",
          "kinds": [],
          "trigger": null,
          "budget": {
            "max_tokens": null,
            "max_wall_ms": null,
            "max_turns": null
          }
        }
      ]
    }
  },
  "mcp": {
    "stdio": {
      "single_tenant": false
    }
  },
  "observability": {
    "enabled": true,
    "local_metrics": true,
    "local_traces": true,
    "exporter": "none",
    "endpoint": null,
    "redact_sensitive_fields": true
  },
  "consolidation": {
    "enabled": true,
    "window_size_turns": 8,
    "min_turns_for_trigger": 4,
    "token_budget": 512,
    "salience_floor": 0.4
  },
  "dream": {
    "enabled": false,
    "light_sleep": {
      "tier": "light_sleep",
      "cadence": "stop_hook_and_turns",
      "input_window": "current_session_and_last24h",
      "output_kind": "index_updates_and_conflict_markers",
      "worker": "llm",
      "window_size_records": 16,
      "completion_token_budget": 1024,
      "max_wall_ms": 60000,
      "max_tool_calls": 0,
      "llm_temperature": 0.0
    },
    "rem_sleep": {
      "tier": "rem_sleep",
      "cadence": "hourly_or_high_salience",
      "input_window": "last7_days",
      "output_kind": "consolidated_records_and_reflection_kicks",
      "worker": "hybrid",
      "window_size_records": 128,
      "completion_token_budget": 4096,
      "max_wall_ms": 180000,
      "max_tool_calls": 0,
      "llm_temperature": 0.0
    },
    "deep_dreaming": {
      "tier": "deep_dreaming",
      "cadence": "nightly_or_cron",
      "input_window": "entire_vault",
      "output_kind": "promotions_skills_synthesis_and_lint",
      "worker": "hybrid",
      "window_size_records": 1024,
      "completion_token_budget": 16384,
      "max_wall_ms": 900000,
      "max_tool_calls": 0,
      "llm_temperature": 0.0
    }
  },
  "expiration": {
    "enabled": false,
    "ttl_days": 30,
    "salience_floor": 0.0,
    "batch_size": 128
  },
  "evaluation": {
    "enabled": false,
    "checks": [],
    "write_report_record": true
  }
}
