crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__config_llm_enabled.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&c"
---
{
  "vault": {
    "name": "my-vault",
    "tier": "local",
    "layout": {
      "sources": "sources",
      "records": "raw",
      "wiki": "wiki",
      "skills": "skills",
      "enabled_kinds": [],
      "file_naming": "{kind}_{slug}.md",
      "index": {
        "max_lines": 200,
        "max_bytes": 25600
      }
    },
    "hot_memory": {
      "recipe": [
        "purpose",
        "index",
        "pinned_feedback",
        "top_salience_project",
        "active_playbook",
        "recent_user_signal"
      ],
      "max_bytes": 25600,
      "pre_compact_recipe": "handoff",
      "pre_compact_safety_ratio": 0.3
    },
    "retention": {},
    "schema_files": [
      "CLAUDE.md",
      "AGENTS.md",
      "GEMINI.md"
    ]
  },
  "store": {
    "kind": "sqlite"
  },
  "llm": {
    "provider": "openai-compatible",
    "base_url": "http://localhost:11434/v1",
    "model": "${CAIRN_MODEL}",
    "api_key": "${OPENAI_API_KEY}"
  },
  "search": {
    "local_embeddings": true,
    "embedding_model": "bge-small-en-v1.5",
    "default_mode": "hybrid",
    "default_provider": "local",
    "rerank_blend": 0.7,
    "fts_column_weights": [
      10.0,
      10.0,
      5.0,
      1.0
    ],
    "rrf_k": 60,
    "rerank_topk": 20,
    "max_snippet_chars_per_page": 8000,
    "graph_confidence_min": 0.3
  },
  "source": {
    "redact_on_forget": false
  },
  "sensors": {
    "hooks": {
      "enabled": true
    },
    "ide": {
      "enabled": true
    },
    "screen": {
      "enabled": false
    },
    "slack": {
      "enabled": false,
      "scope": []
    }
  },
  "workflows": {
    "orchestrator": "local"
  },
  "pipeline": {
    "extract": {
      "chain": [
        {
          "worker": "regex",
          "kinds": [
            "feedback",
            "rule"
          ],
          "trigger": null,
          "budget": {
            "max_tokens": null,
            "max_wall_ms": null,
            "max_turns": null
          }
        },
        {
          "worker": "llm",
          "kinds": [],
          "trigger": "confidence_below",
          "budget": {
            "max_tokens": 4096,
            "max_wall_ms": 10000,
            "max_turns": null
          }
        }
      ]
    }
  },
  "mcp": {
    "stdio": {
      "single_tenant": false
    }
  },
  "source": {
    "redact_on_forget": false
  }
}
