crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__config_p0_defaults.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&c"
---
{
  "vault": {
    "name": "my-vault",
    "tier": "local",
    "source": {
      "redact_on_forget": false
    },
    "layout": {
      "sources": "sources",
      "records": "raw",
      "wiki": "wiki",
      "skills": "skills",
      "enabled_kinds": [],
      "file_naming": "{kind}_{slug}.md",
      "index": {
        "max_lines": 200,
        "max_bytes": 25600
      }
    },
    "hot_memory": {
      "recipe": [
        "purpose",
        "index",
        "pinned_feedback",
        "top_salience_project",
        "active_playbook",
        "recent_user_signal"
      ],
      "max_bytes": 25600,
      "pre_compact_recipe": "handoff",
      "pre_compact_safety_ratio": 0.3
    },
    "retention": {},
    "schema_files": [
      "CLAUDE.md",
      "AGENTS.md",
      "GEMINI.md"
    ]
  },
  "store": {
    "kind": "sqlite"
  },
  "llm": {
    "provider": null,
    "base_url": null,
    "model": null,
    "api_key": null
  },
  "search": {
    "local_embeddings": true,
    "embedding_model": "bge-small-en-v1.5",
    "default_mode": "hybrid",
    "default_provider": "local",
    "rerank_blend": 0.7,
    "fts_column_weights": [
      10.0,
      10.0,
      5.0,
      1.0
    ],
    "rrf_k": 60,
    "rerank_topk": 20,
    "max_snippet_chars_per_page": 8000,
    "graph_confidence_min": 0.3
  },
  "source": {
    "redact_on_forget": false
  },
  "sensors": {
    "hooks": {
      "enabled": true
    },
    "ide": {
      "enabled": true
    },
    "screen": {
      "enabled": false,
      "backend": "xcap",
      "ocr": {
        "engine": "auto"
      },
      "allow_apps": [],
      "blur_password_fields": true,
      "budget": {
        "max_frames_per_minute": 12,
        "max_text_bytes_per_event": 16384
      }
    },
    "slack": {
      "enabled": false,
      "scope": []
    }
  },
  "reference_consumer": {
    "zero_capture_nudge": {
      "enabled": true
    }
  },
  "workflows": {
    "orchestrator": "local"
  },
  "pipeline": {
    "extract": {
      "chain": [
        {
          "worker": "regex",
          "kinds": [],
          "trigger": null,
          "budget": {
            "max_tokens": null,
            "max_wall_ms": null,
            "max_turns": null
          }
        }
      ]
    }
  },
  "mcp": {
    "stdio": {
      "single_tenant": false
    }
  },
  "consolidation": {
    "enabled": true,
    "window_size_turns": 8,
    "min_turns_for_trigger": 4,
    "token_budget": 512,
    "salience_floor": 0.4
  }
}
