crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__filter_and_two_leaves.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&f"
---
{
  "and": [
    {
      "field": "visibility",
      "op": "eq",
      "value": "private"
    },
    {
      "field": "salience",
      "op": "gte",
      "value": 0.5
    }
  ]
}
