crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__filter_leaf_eq.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&f"
---
{
  "field": "kind",
  "op": "eq",
  "value": "user"
}
