crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__filter_or_with_not.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&f"
---
{
  "or": [
    {
      "field": "kind",
      "op": "in",
      "value": [
        "user",
        "feedback",
        "rule"
      ]
    },
    {
      "not": {
        "field": "visibility",
        "op": "eq",
        "value": "public"
      }
    }
  ]
}
