crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__hot_memory_truncated.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
assertion_line: 198
expression: "&h"
---
{
  "bytes": 11,
  "cache": {
    "key": "fixture-truncated",
    "status": "miss"
  },
  "prefix": "## purpose\n",
  "sources": [
    {
      "attempted": 1,
      "bytes": 11,
      "included": 1,
      "kind": "purpose",
      "omitted": 0
    }
  ],
  "truncation": [
    {
      "attempted_bytes": 32,
      "included_bytes": 11,
      "kind": "purpose",
      "reason": "section_truncated"
    }
  ]
}
