crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__manifest_cairn_store_sqlite.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: m
---
PluginManifest {
    name: PluginName(
        "cairn-store-sqlite",
    ),
    contract: MemoryStore,
    contract_version_range: VersionRange {
        min: ContractVersion {
            major: 0,
            minor: 2,
            patch: 0,
        },
        max_exclusive: ContractVersion {
            major: 0,
            minor: 3,
            patch: 0,
        },
    },
    features: {
        "fts": true,
        "graph_edges": false,
        "vector": false,
    },
}
