crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__record_episodic_session_trace.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
expression: "&r"
---
{
  "id": "01HQZX9F5N0000000000000001",
  "target_id": "01HQZX9F5N0000000000000001",
  "kind": "trace",
  "class": "episodic",
  "visibility": "session",
  "scope": {
    "session_id": "01HQZX9F5N0000000000000002",
    "agent": "agt:claude-code:sonnet-4-6:main:v1"
  },
  "body": "Agent completed the ingest verb implementation for the cairn-cli crate.",
  "provenance": {
    "source_sensor": "snr:local:hook:cc-session:v1",
    "created_at": "2026-04-26T00:00:00Z",
    "originating_agent_id": "agt:claude-code:sonnet-4-6:main:v1",
    "source_ids": [
      "sources/fixtures/episodic_session_trace.md"
    ],
    "source_hash": "sha256:bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
    "consent_ref": "consent:01HQZ",
    "llm_id_if_any": "claude-sonnet-4-6"
  },
  "updated_at": "2026-04-26T00:00:00Z",
  "evidence": {
    "recall_count": 0,
    "score": 0.0,
    "unique_queries": 0,
    "recency_half_life_days": 14
  },
  "salience": 0.5,
  "confidence": 0.7,
  "actor_chain": [
    {
      "role": "author",
      "identity": "agt:claude-code:sonnet-4-6:main:v1",
      "at": "2026-04-26T00:00:00Z"
    }
  ],
  "signature": "ed25519:bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
}
