crates/cairn-test-fixtures/tests/snapshots/schema_fixtures__record_graph_team_entity.snap
---
source: crates/cairn-test-fixtures/tests/schema_fixtures.rs
assertion_line: 81
expression: "&r"
---
{
  "id": "01HQZX9F5N0000000000000004",
  "target_id": "01HQZX9F5N0000000000000004",
  "kind": "entity",
  "class": "graph",
  "visibility": "team",
  "scope": {
    "entity": "acme-corp",
    "user": "hmn:tafeng"
  },
  "body": "Acme Corp is the primary enterprise customer for the Cairn pilot deployment.",
  "source_ids": [
    "01HQZX9F5N0000000000000001"
  ],
  "provenance": {
    "source_sensor": "snr:local:hook:cc-session:v1",
    "created_at": "2026-04-26T00:00:00Z",
    "originating_agent_id": "hmn:tafeng",
    "source_ids": [
      "01HQZX9F5N0000000000000011"
    ],
    "source_hash": "sha256:dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd",
    "consent_ref": "consent:01HQZ",
    "llm_id_if_any": null,
    "source_refs": []
  },
  "updated_at": "2026-04-26T00:00:00Z",
  "evidence": {
    "recall_count": 0,
    "score": 0.0,
    "unique_queries": 0,
    "recency_half_life_days": 14
  },
  "salience": 0.5,
  "confidence": 0.7,
  "actor_chain": [
    {
      "role": "author",
      "identity": "hmn:tafeng",
      "at": "2026-04-26T00:00:00Z"
    }
  ],
  "signature": "ed25519:dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
}
